<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app_launch_title">My Nanodegree Apps!</string>
    <string name="app_launch_spotify_btn">Spotify Streamer</string>
    <string name="app_launch_football_scores_app_btn">Football Scores</string>
    <string name="app_launch_library_app_btn">Library</string>
    <string name="app_launch_build_it_bigger_btn">Build It Bigger</string>
    <string name="app_launch_xyz_reader_btn">XYZ Reader</string>
    <string name="app_launch_capstone_btn">Capstone</string>
    <string name="app_launch_toast">This button will launch my %s app!</string>
</resources>
